ingress/ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Disables automatic redirection from HTTP to HTTPS.​
    nginx.ingress.kubernetes.io/use-regex: "true"      # Enables the use of regular expressions in path matching. ​ 
    nginx.ingress.kubernetes.io/rewrite-target: /$2    # Rewrites the matched URI to the specified target.​
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nginx(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /httpd(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: httpd
                port:
                  number: 80
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx
                port:
                  number: 80
